OLMIS-4052: work in progress
